[package]
name = "kak-ui"
description = "A high-level rust wrapper around kakoune's JSON-RPC user interface"
version = "0.1.0"
license = "MIT"
authors = ["Shaurya Shubham <shauryashubham1234567890@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
