[package]
name = "kak-ui"
description = "A high-level rust wrapper around kakoune's JSON-RPC user interface"
readme = "README.md"
repository = "https://github.com/coolshaurya/kak-ui"
homepage = "https://github.com/coolshaurya/kak-ui"
version = "0.2.0"
license = "MIT"
keywords = ["kakoune"]
categories = ["text-editors"]
authors = ["Shaurya Shubham <shauryashubham1234567890@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0" # This is only for the doc-example in lib.rs
